--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,4 +81,23 @@
         app:layout_constraintStart_toEndOf="@+id/connectarButton"
         app:layout_constraintTop_toBottomOf="@+id/ipEditText" />
 
+    <Button
+        android:id="@+id/historialButton"
+        android:layout_width="54dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:backgroundTint="#00FFFFFF"
+        android:paddingLeft="10dp"
+        android:paddingTop="0dp"
+        android:paddingRight="0dp"
+        android:paddingBottom="0dp"
+        app:icon="@android:drawable/stat_notify_chat"
+        app:iconPadding="0dp"
+        app:iconSize="35dp"
+        app:iconTint="#007BFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="invisible" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
