--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme" />
 
     <TextView
         android:id="@+id/usuariLogintextView"
@@ -99,7 +105,7 @@
         android:layout_height="54dp"
         android:layout_marginTop="72dp"
         android:backgroundTint="#00FFFFFF"
-        android:paddingLeft="10dp"
+        android:paddingLeft="0dp"
         android:paddingTop="0dp"
         android:paddingRight="0dp"
         android:paddingBottom="0dp"
@@ -112,5 +118,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible" />
+
+    <Button
+        android:id="@+id/peopleButton"
+        android:layout_width="47dp"
+        android:layout_height="46dp"
+        android:backgroundTint="#00BD6464"
+        android:paddingLeft="6dp"
+        android:paddingTop="0dp"
+        android:paddingRight="0dp"
+        android:paddingBottom="0dp"
+        app:icon="@drawable/comunity"
+        app:iconSize="35dp"
+        tools:layout_editor_absoluteY="10dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
