Mobile App finished

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,7 +24,7 @@
         android:layout_height="63dp"
         android:layout_marginTop="36dp"
         android:backgroundTint="#007BFF"
-        android:text="CONNECTAR"
+        android:text="CONECTAR"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,7 +88,7 @@
         android:layout_height="63dp"
         android:layout_marginTop="36dp"
         android:backgroundTint="#007BFF"
-        android:text="CONNECTAR"
+        android:text="CONECTAR"
         android:textSize="20sp"
         android:textStyle="bold"
         android:visibility="invisible"
